Fix layout issues - Safari issues - Results screen layout issues - Reduce initial padding for form elements

--- a/src/styles/_living_situation.scss
+++ b/src/styles/_living_situation.scss
@@ -60,9 +60,9 @@
       .single_icon { 
         padding: 0em;
         height: 90%;
-        display: grid;
-        justify-items: center;
-        align-items: center;
+        // display: grid;
+        // justify-items: center;
+        // align-items: center;
         max-width: 50px;
       }
     }
